--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/database": "^16.5.0",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-linear-gradient": "^2.6.2",
